@@ -1,144 +1,140 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <project name="test" default="create_run_jar" basedir=".">
 
-	<taskdef name="swtjar" classname="org.swtjar.ant.SWTJarTask"
-	                       classpath="./lib/swtjar.jar"/>
+	<!-- JavaFX module path - JavaFX is bundled with JDK 11+ or available as separate modules -->
+	<property name="javafx.modules" value="javafx.controls,javafx.fxml,javafx.web"/>
 	
-	 <path id="project.class.path">
-	    <fileset dir="lib" includes="*.jar"/>
+	<!-- JavaFX SDK path (set this if you downloaded JavaFX SDK separately) -->
+	<!-- Example: <property name="javafx.sdk.path" value="C:/javafx-sdk-21/lib"/> -->
+	<!-- If not set, build will try to use JavaFX from JDK (if available) -->
+	
+	<!-- Main class to use (defaults to old SWT version if JavaFX not available) -->
+	<property name="main.class" value="com.groupunix.drivewireui.MainWin"/>
+	
+	<!-- Check if JavaFX classes were compiled -->
+	<available classname="com.groupunix.drivewireui.MainWinFX" classpath="${basedir}/classes" property="javafx.available"/>
+	
+	<!-- Build JavaFX compiler args as a single line if SDK path is set -->
+	<condition property="javafx.compiler.args" value="--module-path ${javafx.sdk.path} --add-modules ${javafx.modules}">
+		<isset property="javafx.sdk.path"/>
+	</condition>
+	<property name="javafx.compiler.args" value=""/>
+	
+	<!-- Classpath excludes SWT but keeps Eclipse JFace (needed for wizards) -->
+	<!-- Note: swing2swt.jar is kept for compatibility with non-migrated components -->
+	<path id="project.class.path">
+	    <fileset dir="lib" includes="*.jar" excludes="swt*.jar,swtjar.jar"/>
 	 	<fileset dir="../java/lib" includes="*.jar"/>
 	  </path>
 
 	  <target name="javac" description="Compile java source">
 	    <mkdir dir="classes"/>
 	  	
-
-	    
-	  	<javac srcdir="../java/src" includes="**" encoding="utf-8"
+	    <!-- Compile server code (no JavaFX needed) -->
+	  	<javac srcdir="../java/src" includes="**" encoding="windows-1252"
             destdir="classes"
-            source="1.5" target="1.5" nowarn="true"
-            debug="true" debuglevel="lines,vars,source">
+            source="21" target="21" nowarn="true"
+            debug="true" debuglevel="lines,vars,source"
+            includeantruntime="false">
           <classpath refid="project.class.path"/>
         </javac>
         
-        <javac srcdir="src" includes="**" encoding="utf-8"
+        <!-- Compile UI code -->
+        <!-- Add JavaFX module path if SDK is provided (allows JavaFX files to compile) -->
+        <javac encoding="windows-1252"
             destdir="classes"
-            source="1.5" target="1.5" nowarn="true"
-            debug="true" debuglevel="lines,vars,source">
+            source="21" target="21" nowarn="true"
+            debug="true" debuglevel="lines,vars,source"
+            includeantruntime="false">
           <classpath refid="project.class.path"/>
+          <src path="src"/>
+          <!-- Exclude FXML files (they're resources, not source) -->
+          <exclude name="**/*.fxml"/>
+          <!-- Add JavaFX module path if SDK is provided -->
+          <compilerarg line="${javafx.compiler.args}"/>
         </javac>
+        
+        <!-- Now compile JavaFX files with module path if SDK is provided -->
+        <condition property="javafx.compile" value="true">
+          <isset property="javafx.sdk.path"/>
+        </condition>
+        
+        <!-- Compile JavaFX files separately if JavaFX SDK path is provided -->
+        <javac encoding="windows-1252"
+            destdir="classes"
+            source="21" target="21" nowarn="true"
+            debug="true" debuglevel="lines,vars,source"
+            includeantruntime="false"
+            failonerror="false"
+            fork="true"
+            executable="${java.home}/bin/javac">
+          <classpath refid="project.class.path"/>
+          <src path="src"/>
+          <include name="**/MainWinFX.java"/>
+          <include name="**/MainWindowController.java"/>
+          <include name="**/BrowserController.java"/>
+          <include name="**/ChooseServerDialogController.java"/>
+          <include name="**/ErrorDialogFX.java"/>
+          <include name="**/PlatformUtils.java"/>
+          <compilerarg value="--module-path"/>
+          <compilerarg value="${javafx.sdk.path}"/>
+          <compilerarg value="--add-modules"/>
+          <compilerarg value="${javafx.modules}"/>
+        </javac>
+        
 	    
 	   
 	  </target>
 	
 	 <target name="create_run_jar" depends="javac">
+	        <!-- Set main class based on what's available -->
+	        <condition property="main.class" value="com.groupunix.drivewireui.MainWinFX">
+	            <available classname="com.groupunix.drivewireui.MainWinFX" classpath="${basedir}/classes"/>
+	        </condition>
+	        <property name="main.class" value="com.groupunix.drivewireui.MainWin"/>
+	        
 	        <jar destfile="./DriveWireUI.jar" filesetmanifest="mergewithoutmain">
 	            <manifest>
-	            	<attribute name="Main-Class" value="org.eclipse.jdt.internal.jarinjarloader.JarRsrcLoader"/>
-	            	<attribute name="Rsrc-Main-Class" value="com.groupunix.drivewireui.MainWin"/>
+	            	<!-- Use MainWinFX if JavaFX is available, otherwise fallback to old MainWin -->
+	            	<attribute name="Main-Class" value="${main.class}"/>
 	                <attribute name="Class-Path" value="."/>
-	            	<attribute name="Rsrc-Class-Path" value=" ./ commons-configuration-1.6.jar swing2swt.jar commons-lang-2.4.jar swt.jar commons-collections-3.2.1.jar commons-logging-1.1.1.jar dwimages.jar"/>
 	            </manifest>
 	        	<fileset dir="${basedir}/classes"/>
 	        	
+	            <!-- Core dependencies (excluding SWT/Eclipse) -->
 	            <zipfileset excludes="META-INF/*.SF" src="${basedir}/lib/commons-collections-3.2.1.jar"/>
 	            <zipfileset excludes="META-INF/*.SF" src="${basedir}/lib/commons-configuration-1.6.jar"/>
 	            <zipfileset excludes="META-INF/*.SF" src="${basedir}/lib/commons-lang-2.4.jar"/>
 	            <zipfileset excludes="META-INF/*.SF" src="${basedir}/lib/commons-logging-1.1.1.jar"/>
-	        	<zipfileset excludes="META-INF/*.SF" src="${basedir}/lib/swtjar.jar"/>
 	        	<zipfileset excludes="META-INF/*.SF" src="${basedir}/lib/dwimages.jar"/>
-	        	<zipfileset excludes="META-INF/*.SF" src="${basedir}/lib/swing2swt.jar"/>
-	        	<zipfileset excludes="META-INF/*.SF" src="${basedir}/lib/swt.jar"/>
 	        	
-	        	<zipfileset excludes="META-INF/*.SF" src="${basedir}/lib/org.eclipse.equinox.common_3.6.0.v20100503.jar"/>
-	        	<zipfileset excludes="META-INF/*.SF" src="${basedir}/lib/org.eclipse.core.commands_3.6.0.I20100512-1500.jar"/>
-	        	<zipfileset excludes="META-INF/*.SF" src="${basedir}/lib/org.eclipse.core.runtime_3.6.0.v20100505.jar"/>
-	        	<zipfileset excludes="META-INF/*.SF" src="${basedir}/lib/org.eclipse.jface_3.6.2.M20110210-1200.jar"/>
-	        	<zipfileset excludes="META-INF/*.SF" src="${basedir}/lib/org.osgi.core-4.3.0.jar"/>
-	        		                
+	        	<!-- Server dependencies -->
+	        	<zipfileset excludes="META-INF/*.SF" src="../java/lib/commons-net-2.0.jar"/>
+	        	<zipfileset excludes="META-INF/*.SF" src="../java/lib/commons-codec-1.4.jar"/>
+	        	<zipfileset excludes="META-INF/*.SF" src="../java/lib/commons-vfs-1.0.jar"/>
+	        	<zipfileset excludes="META-INF/*.SF" src="../java/lib/commons-httpclient-3.1.jar"/>
+	        	<zipfileset excludes="META-INF/*.SF" src="../java/lib/commons-cli-1.2.jar"/>
+	        	<zipfileset excludes="META-INF/*.SF" src="../java/lib/jsch-0.1.42.jar"/>
+	        	<zipfileset excludes="META-INF/*.SF" src="../java/lib/jasypt-1.6.jar"/>
+	        	<zipfileset excludes="META-INF/*.SF" src="../java/lib/log4j-1.2.15.jar"/>
+	        	<zipfileset excludes="META-INF/*.SF" src="../java/lib/ostermillerutils_1_07_00.jar"/>
+	        	<zipfileset excludes="META-INF/*.SF" src="../java/lib/RXTXcomm.jar"/>
+	        	<zipfileset excludes="META-INF/*.SF" src="../java/lib/slf4j-api-1.5.10.jar"/>
+	        	<zipfileset excludes="META-INF/*.SF" src="../java/lib/slf4j-log4j12-1.5.10.jar"/>
+	        	<zipfileset excludes="META-INF/*.SF" src="../java/lib/httpclient-4.0.1.jar"/>
+	        	<zipfileset excludes="META-INF/*.SF" src="../java/lib/httpmime-4.0.1.jar"/>
+	        	<zipfileset excludes="META-INF/*.SF" src="../java/lib/httpcore-4.0.1.jar"/>
+	        	<zipfileset excludes="META-INF/*.SF" src="../java/lib/apache-mime4j-0.6.jar"/>
 	        	
-	        		            <zipfileset excludes="META-INF/*.SF" src="../java/lib/commons-net-2.0.jar"/>
-	        		            <zipfileset excludes="META-INF/*.SF" src="../java/lib/commons-codec-1.4.jar"/>
-	        		            <zipfileset excludes="META-INF/*.SF" src="../java/lib/commons-vfs-1.0.jar"/>
-	        		            <zipfileset excludes="META-INF/*.SF" src="../java/lib/commons-net-2.0.jar"/>
-	        		            <zipfileset excludes="META-INF/*.SF" src="../java/lib/commons-httpclient-3.1.jar"/>
-	        		            <zipfileset excludes="META-INF/*.SF" src="../java/lib/commons-cli-1.2.jar"/>
-	        		            <zipfileset excludes="META-INF/*.SF" src="../java/lib/jsch-0.1.42.jar"/>
-	        		            <zipfileset excludes="META-INF/*.SF" src="../java/lib/jasypt-1.6.jar"/>
-	        		            <zipfileset excludes="META-INF/*.SF" src="../java/lib/log4j-1.2.15.jar"/>
-
-	        		            <zipfileset excludes="META-INF/*.SF" src="../java/lib/ostermillerutils_1_07_00.jar"/>
-	        		            <zipfileset excludes="META-INF/*.SF" src="../java/lib/RXTXcomm.jar"/>
-	        		            <zipfileset excludes="META-INF/*.SF" src="../java/lib/slf4j-api-1.5.10.jar"/>
-	        		            <zipfileset excludes="META-INF/*.SF" src="../java/lib/slf4j-log4j12-1.5.10.jar"/>
-	        		<zipfileset excludes="META-INF/*.SF" src="../java/lib/httpclient-4.0.1.jar"/>
-	        		<zipfileset excludes="META-INF/*.SF" src="../java/lib/httpmime-4.0.1.jar"/>
-	        		<zipfileset excludes="META-INF/*.SF" src="../java/lib/httpcore-4.0.1.jar"/>
-	        		<zipfileset excludes="META-INF/*.SF" src="../java/lib/apache-mime4j-0.6.jar"/>
-	        	
-	        	
-	        	
-	        	   
-	        	
-	        	
+	        	<!-- Include FXML and CSS resources -->
+	        	<fileset dir="${basedir}/src" includes="**/*.fxml"/>
+	        	<fileset dir="${basedir}/src" includes="**/*.css"/>
+	        	<fileset dir="${basedir}/src" includes="**/*.png"/>
+	        	<fileset dir="${basedir}/src" includes="**/*.jpg"/>
+	        	<fileset dir="${basedir}/src" includes="**/*.gif"/>
+	        	<fileset dir="${basedir}/src" includes="**/*.ico"/>
 	        </jar>
 	    </target>
 	
-	
-	<!-- Package cross platform SWT Jar -->
-	<swtjar jarfile="./DW4UI.jar"
-			targetmainclass="com.groupunix.drivewireui.MainWin"
-			swtversion="4.2.1">
-		
-		
-		
-	
-		
-		
-	  <!-- Application Classes -->
-	  <fileset dir="${basedir}/classes/" includes="**/*.class" />
-	  
-	  <!-- Library Classes
-	  <zipfileset excludes="META-INF/*.MF" src="lib/miglayout-3.7.3.1-swt.jar"/>
-	   -->
-		<zipfileset excludes="META-INF/*.SF" src="${basedir}/lib/commons-collections-3.2.1.jar"/>
-		<zipfileset excludes="META-INF/*.SF" src="${basedir}/lib/commons-configuration-1.6.jar"/>
-		<zipfileset excludes="META-INF/*.SF" src="${basedir}/lib/commons-lang-2.4.jar"/>
-		<zipfileset excludes="META-INF/*.SF" src="${basedir}/lib/commons-logging-1.1.1.jar"/>
-		<zipfileset excludes="META-INF/*.SF" src="${basedir}/lib/swtjar.jar"/>
-		<zipfileset excludes="META-INF/*.SF" src="${basedir}/lib/dwimages.jar"/>
-		<zipfileset excludes="META-INF/*.SF" src="${basedir}/lib/swing2swt.jar"/>
-		<zipfileset excludes="META-INF/*.SF" src="${basedir}/lib/org.eclipse.equinox.common_3.6.0.v20100503.jar"/>
-		<zipfileset excludes="META-INF/*.SF" src="${basedir}/lib/org.eclipse.core.commands_3.6.0.I20100512-1500.jar"/>
-		<zipfileset excludes="META-INF/*.SF" src="${basedir}/lib/org.eclipse.core.runtime_3.6.0.v20100505.jar"/>
-		<zipfileset excludes="META-INF/*.SF" src="${basedir}/lib/org.eclipse.jface_3.6.2.M20110210-1200.jar"/>
-		<zipfileset excludes="META-INF/*.SF" src="${basedir}/lib/org.osgi.core-4.3.0.jar"/>
-		<zipfileset excludes="META-INF/*.SF" src="${basedir}/lib/miglayout-4.0.jar"/>
-		<zipfileset excludes="META-INF/*.SF" src="${basedir}/lib/miglayout-4.0-swing.jar"/>
-		
-        <zipfileset excludes="META-INF/*.SF" src="../java/lib/commons-net-2.0.jar"/>
-          <zipfileset excludes="META-INF/*.SF" src="../java/lib/commons-codec-1.4.jar"/>
-          <zipfileset excludes="META-INF/*.SF" src="../java/lib/commons-vfs-1.0.jar"/>
-          <zipfileset excludes="META-INF/*.SF" src="../java/lib/commons-net-2.0.jar"/>
-          <zipfileset excludes="META-INF/*.SF" src="../java/lib/commons-httpclient-3.1.jar"/>
-          <zipfileset excludes="META-INF/*.SF" src="../java/lib/commons-cli-1.2.jar"/>
-          <zipfileset excludes="META-INF/*.SF" src="../java/lib/jsch-0.1.42.jar"/>
-          <zipfileset excludes="META-INF/*.SF" src="../java/lib/jasypt-1.6.jar"/>
-          <zipfileset excludes="META-INF/*.SF" src="../java/lib/log4j-1.2.15.jar"/>
-
-          <zipfileset excludes="META-INF/*.SF" src="../java/lib/ostermillerutils_1_07_00.jar"/>
-          <zipfileset excludes="META-INF/*.SF" src="../java/lib/RXTXcomm.jar"/>
-          <zipfileset excludes="META-INF/*.SF" src="../java/lib/slf4j-api-1.5.10.jar"/>
-          <zipfileset excludes="META-INF/*.SF" src="../java/lib/slf4j-log4j12-1.5.10.jar"/>
-<zipfileset excludes="META-INF/*.SF" src="../java/lib/httpclient-4.0.1.jar"/>
-<zipfileset excludes="META-INF/*.SF" src="../java/lib/httpmime-4.0.1.jar"/>
-<zipfileset excludes="META-INF/*.SF" src="../java/lib/httpcore-4.0.1.jar"/>
-<zipfileset excludes="META-INF/*.SF" src="../java/lib/apache-mime4j-0.6.jar"/>
-		
-		
-	  <!-- SWT Jars -->
-	  <fileset dir="./lib" includes="swt-*.jar" />
-	</swtjar>
-
 	
 </project>
